--- a/MIT/class/templates/contact/Contact.html
+++ b/MIT/class/templates/contact/Contact.html
@@ -2,8 +2,7 @@
 
 {% block body %}
 
-
-<h1>HELLO WORLD!</h1>
-<p>Welcome to the Home page</p>
+<h2>Hey there!</h2>
+<p>Welcome to the Contact Page</p>
 
 {%endblock%}
