--- a/MIT/class/templates/layout.html
+++ b/MIT/class/templates/layout.html
@@ -15,6 +15,8 @@
 
 <a href="{% url 'class:Contact' %}">Contact</a>
 
+<a href="{% url 'crud:home' %}">Crud</a>
+
 {% block body %}
 
 {% endblock %}
