--- a/MIT/crud/templates/index.html
+++ b/MIT/crud/templates/index.html
@@ -44,25 +44,36 @@
       <th scope="col">Name</th>
       <th scope="col">School</th>
       <th scope="col">Email</th>
+        <th scope="col">Edit</th>
+        <th scope="col">Delete</th>
+
     </tr>
   </thead>
+            
   <tbody>
     <tr>
       <th scope="row">1</th>
       <td>Mark</td>
       <td>Otto</td>
       <td>mark@gmail.com</td>
+        <td>Edit</td>
+        <td>Delete</td>
     </tr>
+
     <tr>
       <th scope="row">2</th>
       <td>Jacob</td>
       <td>Thornton</td>
       <td>jacob@gmail.com</td>
+        <td>Edit</td>
+        <td>Delete</td>
     </tr>
     <tr>
       <th scope="row">3</th>
       <td colspan="2">Larry</td>
       <td>larry@gmail.com</td>
+        <td>Edit</td>
+        <td>Delete</td>
     </tr>
   </tbody>
 </table>
