--- a/MIT/crud/templates/index.html
+++ b/MIT/crud/templates/index.html
@@ -51,30 +51,19 @@
   </thead>
             
   <tbody>
+
+  {% for k in d %}
     <tr>
-      <th scope="row">1</th>
-      <td>Mark</td>
-      <td>Otto</td>
-      <td>mark@gmail.com</td>
+      <th scope="row">{{ k.id }}</th>
+      <td>{{ k.name }}</td>
+      <td>{{ k.school }}</td>
+      <td>{{ k.email }}</td>
         <td>Edit</td>
         <td>Delete</td>
     </tr>
 
-    <tr>
-      <th scope="row">2</th>
-      <td>Jacob</td>
-      <td>Thornton</td>
-      <td>jacob@gmail.com</td>
-        <td>Edit</td>
-        <td>Delete</td>
-    </tr>
-    <tr>
-      <th scope="row">3</th>
-      <td colspan="2">Larry</td>
-      <td>larry@gmail.com</td>
-        <td>Edit</td>
-        <td>Delete</td>
-    </tr>
+  {% endfor %}
+
   </tbody>
 </table>
 
