--- a/MIT/crud/templates/edit.html
+++ b/MIT/crud/templates/edit.html
@@ -15,7 +15,7 @@
 
         <div class="col-md-6">
 
-        <form action=" " method="POST">
+        <form action="/crud/editdata/{{ddd.id}}" method="POST">
 
             {% csrf_token %}
 
