--- a/MIT/crud/templates/index.html
+++ b/MIT/crud/templates/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+
+
 </head>
 <body>
 <h1>Django crud</h1>
@@ -37,41 +40,41 @@
 
     <div class="col-md-7">
 
-        <table class="table">
-  <thead>
-    <tr>
-      <th scope="col">#</th>
-      <th scope="col">Name</th>
-      <th scope="col">School</th>
-      <th scope="col">Email</th>
-        <th scope="col">Edit</th>
-        <th scope="col">Delete</th>
+<!--        <table class="table">-->
+<!--  <thead>-->
+<!--    <tr>-->
+<!--      <th scope="col">#</th>-->
+<!--      <th scope="col">Name</th>-->
+<!--      <th scope="col">School</th>-->
+<!--      <th scope="col">Email</th>-->
+<!--        <th scope="col">Edit</th>-->
+<!--        <th scope="col">Delete</th>-->
 
-    </tr>
-  </thead>
-            
-  <tbody>
+<!--    </tr>-->
+<!--  </thead>-->
+<!--            -->
+<!--  <tbody>-->
 
-  {% for k in d %}
-    <tr>
-      <th scope="row">{{ k.id }}</th>
-      <td>{{ k.name }}</td>
-      <td>{{ k.school }}</td>
-      <td>{{ k.email }}</td>
-        
-        <td>
-            <a href="/crud/editdata/{{k.id}}" class="btn btn-warning">Edit</a>
-        </td>
-        
-        <td>
-            <a href="/crud/delete/{{ k.id }}" class="btn btn-danger">Delete</a>
-        </td>
-    </tr>
+<!--  {% for k in d %}-->
+<!--    <tr>-->
+<!--      <th scope="row">{{ k.id }}</th>-->
+<!--      <td>{{ k.name }}</td>-->
+<!--      <td>{{ k.school }}</td>-->
+<!--      <td>{{ k.email }}</td>-->
+<!--        -->
+<!--        <td>-->
+<!--            <a href="/crud/editdata/{{k.id}}" class="btn btn-warning">Edit</a>-->
+<!--        </td>-->
+<!--        -->
+<!--        <td>-->
+<!--            <a href="/crud/delete/{{ k.id }}" class="btn btn-danger">Delete</a>-->
+<!--        </td>-->
+<!--    </tr>-->
 
-  {% endfor %}
+<!--  {% endfor %}-->
 
-  </tbody>
-</table>
+<!--  </tbody>-->
+<!--</table>-->
 
 
 
@@ -84,8 +87,29 @@
 
 
 <div class="container">
-   <img src="{% static 'image/emoji.jpg' %}" alt="" height="100%">
+
+<div class="row">
+
+    {% for k in d %}
+    <div class="col-md-3 product">
+        <img src="{% static 'image/fire.jpg' %}" height="75%" width="100%">
+        <h3>{{k.name}}</h3>
+        <p>{{k.school}}</p>
+        <p>{{k.email}}</p>
+
+        <br><br>
+
+        
+    </div>    
+    {% endfor %}
+   </div>
+    
 </div>
+
+
+<!--<div class="container">-->
+<!--   <img src="{% static 'image/emoji.jpg' %}" alt="" height="100%">-->
+<!--</div>-->
 
 </body>
 </html>
